--- a/style.css
+++ b/style.css
@@ -1,4 +1,22 @@
 html {
-  height: 100%;
-  width: 100%;
+  height: 200%;
+  width: 200%;
+  /* Resets the default margin and padding */
+  body, ul {
+      margin: 0;
+      padding: 0;
+  }
+
+  /* Style the header */
+  header {
+      background-color: #333;
+      color: white;
+      padding: 10px 0;
+  }
+
+  /* Style the navigation bar */
+  nav ul {
+      list-style-type: none;
+      background-color: #333;
+      text-align: center; /* Centers the menu if there's extra space
 }
